fix grid gap

--- a/src/components/containers/itemListContainer/styles.scss
+++ b/src/components/containers/itemListContainer/styles.scss
@@ -23,7 +23,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     row-gap: 20px;
-    column-gap: 19%;
+    column-gap: 25%;
     margin: 0 auto;
     margin-top: 50px;
     max-width: calc(150px * 3 + 3 * 15%);
